syntax = "proto3";

package proto;

enum API {
    None = 0;
    Login = 1;
    JoinRoom = 2;
    SendMessage = 3;
}

message Request {
    API api = 1;
    bytes data = 2;
}

message LoginReq {
    string user_name = 1;
}

message JoinRoomReq{
    int64 room_id = 1;
}

message SendMessageReq{
    string msg = 1;
}